--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ storage/medialibrary
 Homestead.yaml
 Homestead.json
 /.vagrant
+
+# Don't include lock file so it stops causing issues at deployment
+/composer.lock
