--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     "require": {
         "php": "^7.1.3",
         "ebess/advanced-nova-media-library": "^2.2",
+        "eugenerealtygroup/nova-theme": "*",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~5.3|~6.0",
         "laravel/framework": "5.7.*",
         "laravel/nova": "~1.0",
         "laravel/telescope": "^1.0",
         "laravel/tinker": "^1.0",
-        "spatie/laravel-newsletter": "^4.2",
-        "eugenerealtygroup/nova-theme": "*"
+        "spatie/laravel-newsletter": "^4.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
