--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/nova": "~1.0",
         "laravel/telescope": "^1.0",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-newsletter": "^4.2"
     },
     "require-dev": {
