--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/tinker": "^1.0",
         "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-newsletter": "^4.2",
-        "spatie/laravel-permission": "^2.37"
+        "spatie/laravel-permission": "^2.37",
+        "vyuldashev/nova-permission": "^1.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
