--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "eugenerealtygroup/nova-theme": "*",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~5.3|~6.0",
-        "laravel/framework": "5.7.*",
-        "laravel/nova": "~1.0",
+        "laravel/framework": "5.8.*",
+        "laravel/nova": "*",
         "laravel/telescope": "^1.0",
         "laravel/tinker": "^1.0",
         "spatie/laravel-medialibrary": "^7.0.0",
