--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
         "guzzlehttp/guzzle": "~5.3|~6.0",
         "laravel/framework": "5.8.*",
         "laravel/nova": "*",
-        "laravel/telescope": "^1.0",
         "laravel/tinker": "^1.0",
         "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-newsletter": "^4.2",
@@ -27,9 +26,11 @@
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "laravel/telescope": "^2.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "wnx/laravel-stats": "^1.9"
     },
     "config": {
         "optimize-autoloader": true,
